--- a/index.html
+++ b/index.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carro JavaScript</title>
-    <link rel="stylesheet" href="style.css">
+  <title>Herança em JavaScript</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Herança em JavaScript</h1>
 
-    <h1>Meu Carro</h1>
+  <h2>Carro Esportivo</h2>
+    <img src="img/carro2.jpg" alt="Ferrari" width="200">  <!-- Adicionada a imagem -->
+    <p>Modelo: <span id="modeloEsportivo"></span></p>
+    <p>Cor: <span id="corEsportivo"></span></p>
+    <p>Ligado: <span id="ligadoEsportivo"></span></p>
+    <p>Velocidade: <span id="velocidadeEsportivo"></span></p>
+    <p>Turbo Ativado: <span id="turboEsportivo"></span></p>
+    <button id="ligarEsportivoBtn">Ligar</button>
+    <button id="desligarEsportivoBtn">Desligar</button>
+    <button id="acelerarEsportivoBtn">Acelerar</button>
+    <button id="frearEsportivoBtn">Frear</button>
+    <button id="ativarTurboBtn">Ativar Turbo</button>
+  </div>
 
-    <div id="carro-container">
-        <img id="carro-imagem" src="img/fiat-mobi-2023 (1).jpg" alt="Imagem do Carro">
-        <p id="carro-info"></p>
-        <div id="botoes">
-            <button id="ligar-btn">Ligar</button>
-            <button id="desligar-btn">Desligar</button>
-        </div>
-    </div>
+  <h2>Caminhão</h2>
+  <div id="caminhaoDiv">
+    <img src="img/caminhao.jpg" alt="Caminhão" width="200">  <!-- Adicionada a imagem -->
+    <p>Modelo: <span id="modeloCaminhao"></span></p>
+    <p>Cor: <span id="corCaminhao"></span></p>
+    <p>Ligado: <span id="ligadoCaminhao"></span></p>
+    <p>Velocidade: <span id="velocidadeCaminhao"></span></p>
+    <p>Capacidade de Carga: <span id="capacidadeCarga"></span></p>
+    <p>Carga Atual: <span id="cargaAtual"></span></p>
+    <button id="ligarCaminhaoBtn">Ligar</button>
+    <button id="desligarCaminhaoBtn">Desligar</button>
+    <button id="acelerarCaminhaoBtn">Acelerar</button>
+    <button id="frearCaminhaoBtn">Frear</button>
+    <label for="pesoCarga">Peso da Carga:</label>
+    <input type="number" id="pesoCarga">
+    <button id="carregarCaminhaoBtn">Carregar</button>
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
+
