--- a/index.html
+++ b/index.html
@@ -3,66 +3,151 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Garagem: Herança e Polimorfismo</title>
-    <!-- Link para o arquivo de estilos CSS -->
+    <title>Garagem Inteligente v4.0 - Feedback Interativo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
 
-    <h1>Minha Garagem Inteligente</h1>
-
-    <!-- Seção para selecionar qual veículo controlar -->
-    <div class="painel">
-        <h2>Selecionar Veículo</h2>
-        <p>Clique em um botão para escolher o veículo:</p>
-        <!-- Botões que, ao serem clicados, ativarão um veículo específico via JavaScript -->
-        <button id="btnSelCarro">Carro Comum (Fusca)</button>
-        <button id="btnSelEsportivo">Carro Esportivo (Ferrari)</button>
-        <button id="btnSelCaminhao">Caminhão (Scania)</button>
-    </div>
-
-    <!-- Seção principal de interação, inicialmente escondida -->
-    <div class="painel" id="painelControles" style="display: none;"> <!-- style="display: none;" esconde o painel até um veículo ser selecionado -->
-
-        <!-- Título que mostrará qual veículo está selecionado -->
-        <h2 id="tituloVeiculo">Controles</h2>
-
-        <!-- Div onde as informações do veículo (retornadas por exibirInformacoes()) serão exibidas -->
-        <div id="informacoesVeiculo">
-            <p>Selecione um veículo acima.</p>
+    <header class="main-header">
+        <h1>Garagem Inteligente v4.0</h1>
+        <nav class="tab-navigation">
+            <button class="tab-button active" data-tab="tab-garage">Minha Garagem</button>
+            <button class="tab-button" data-tab="tab-add">Adicionar Veículo</button>
+            <button class="tab-button" id="tab-button-details" data-tab="tab-details" disabled>Detalhes do Veículo</button>
+        </nav>
+        <!-- Controle de Volume (Opcional) -->
+        <div class="volume-control">
+            <label for="volumeSlider">Volume:</label>
+            <input type="range" id="volumeSlider" min="0" max="1" step="0.1" value="0.5">
         </div>
+    </header>
 
-        <hr> <!-- Linha horizontal para separar informações dos controles -->
+    <main class="tab-content-area">
 
-        <!-- Controles Comuns a todos os veículos (ou quase todos) -->
-        <h3>Ações Comuns</h3>
-        <button id="btnLigar">Ligar</button>
-        <button id="btnDesligar">Desligar</button>
-        <button id="btnAcelerar">Acelerar</button>
-        <button id="btnFrear">Frear</button>
-        <!-- Poderíamos adicionar buzinar, pintar, etc. aqui -->
+        <!-- Aba: Adicionar Veículo -->
+        <section id="tab-add" class="tab-pane">
+            <div class="painel">
+                <h2>Adicionar Novo Veículo</h2>
+                <form id="formAdicionarVeiculo">
+                    <div class="form-grid">
+                        <div>
+                            <label for="tipoVeiculo">Tipo:</label>
+                            <select id="tipoVeiculo" required>
+                                <option value="" disabled selected>-- Selecione --</option>
+                                <option value="Carro">Carro Comum</option>
+                                <option value="CarroEsportivo">Carro Esportivo</option>
+                                <option value="Caminhao">Caminhão</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label for="modeloVeiculo">Modelo:</label>
+                            <input type="text" id="modeloVeiculo" placeholder="Ex: Fusca, Ferrari F40" required>
+                        </div>
+                        <div>
+                            <label for="corVeiculo">Cor:</label>
+                            <input type="color" id="corVeiculo" value="#cccccc" title="Clique para escolher a cor">
+                        </div>
+                        <div id="campoCapacidadeCarga" class="hidden"> 
+                            <label for="capacidadeCarga">Capacidade Carga (kg):</label>
+                            <input type="number" id="capacidadeCarga" min="100" value="10000" step="100">
+                        </div>
+                    </div>
+                    <button type="submit" class="botao-principal">Adicionar à Garagem</button>
+                </form>
+            </div>
+        </section>
 
-        <!-- Controles Específicos do Carro Esportivo (inicialmente escondidos) -->
-        <div id="controlesEsportivo" class="controles-especificos">
-            <h3>Ações Esportivas</h3>
-            <button id="btnAtivarTurbo">Ativar Turbo</button>
-            <button id="btnDesativarTurbo">Desativar Turbo</button>
-        </div>
+        <!-- Aba: Minha Garagem -->
+        <section id="tab-garage" class="tab-pane active">
+            <div class="painel">
+                <h2>Minha Garagem</h2>
+                <p>Selecione um veículo abaixo para ver detalhes e interagir:</p>
+                <div id="listaVeiculosGaragem">
+                    <p class="placeholder-text">Carregando veículos...</p>
+                </div>
+            </div>
+        </section>
 
-        <!-- Controles Específicos do Caminhão (inicialmente escondidos) -->
-        <div id="controlesCaminhao" class="controles-especificos">
-            <h3>Ações Caminhão</h3>
-            <!-- Campo para inserir o peso a ser carregado/descarregado -->
-            <label for="cargaInput">Peso:</label>
-            <input type="number" id="cargaInput" value="1000" min="1"> kg
-            <button id="btnCarregar">Carregar</button>
-            <button id="btnDescarregar">Descarregar</button>
-        </div>
+        <!-- Aba: Detalhes do Veículo -->
+        <section id="tab-details" class="tab-pane">
+            <div class="painel">
+                <div class="details-header">
+                     <h2 id="tituloVeiculo">Detalhes</h2>
+                     <button id="btnRemoverVeiculo" class="botao-perigo" title="Remover este veículo permanentemente" disabled>Remover Veículo</button>
+                </div>
 
-    </div> <!-- Fim do painel de controles -->
+                <div id="informacoesVeiculo" class="info-box">
+                    <p class="placeholder-text">Selecione um veículo na aba "Minha Garagem".</p>
+                    
+                </div>
+                <hr>
 
-    <!-- Link para o arquivo JavaScript -->
-    <!-- É importante colocar no final do body para garantir que o HTML foi carregado antes do script tentar acessá-lo -->
+                <h3>Ações</h3>
+                <div class="acoes-container">
+                    <button id="btnLigar" title="Ligar o veículo" disabled>Ligar</button>
+                    <button id="btnDesligar" title="Desligar o veículo (somente parado)" disabled>Desligar</button>
+                    <button id="btnAcelerar" title="Aumentar a velocidade" disabled>Acelerar</button>
+                    <button id="btnFrear" title="Diminuir a velocidade" disabled>Frear</button>
+                    <button id="btnBuzinar" title="Buzinar!" disabled>Buzinar 🔊</button>
+
+                    <div id="controlesEsportivo" class="controles-especificos hidden">
+                        <button id="btnAtivarTurbo" title="Ativar o turbo" disabled>Ativar Turbo 🚀</button>
+                        <button id="btnDesativarTurbo" title="Desativar o turbo" disabled>Desativar Turbo</button>
+                    </div>
+                    <div id="controlesCaminhao" class="controles-especificos hidden">
+                        <label for="cargaInput">Peso Carga (kg):</label>
+                        <input type="number" id="cargaInput" value="1000" min="1" step="100" disabled>
+                        <button id="btnCarregar" title="Adicionar carga" disabled>Carregar</button>
+                        <button id="btnDescarregar" title="Remover carga" disabled>Descarregar</button>
+                    </div>
+                </div>
+                <hr>
+
+                <h3>Manutenção</h3>
+                <div class="manutencao-container">
+                    <div class="form-manutencao">
+                        <h4>Registrar / Agendar</h4>
+                        <form id="formManutencao">
+                            <label for="dataManutencao">Data:</label>
+                            <input type="date" id="dataManutencao" required disabled>
+                            <label for="tipoManutencao">Tipo Serviço:</label>
+                            <input type="text" id="tipoManutencao" placeholder="Ex: Troca de óleo" required disabled>
+                            <label for="custoManutencao">Custo (R$):</label>
+                            <input type="number" id="custoManutencao" min="0" step="0.01" value="0" required disabled>
+                            <label for="descManutencao">Descrição (Opcional):</label>
+                            <textarea id="descManutencao" rows="2" placeholder="Detalhes..." disabled></textarea>
+                            <button type="submit" class="botao-secundario" disabled>Adicionar Registro</button>
+                        </form>
+                    </div>
+                    <div class="historico-agendamento">
+                        <h4>Histórico (Passado)</h4>
+                        <ul id="historicoLista"><li class="placeholder-text">Nenhum histórico.</li></ul>
+                        <h4>Agendamentos (Futuro)</h4>
+                        <ul id="agendamentosLista"><li class="placeholder-text">Nenhum agendamento.</li></ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <!-- Container para Notificações Flutuantes -->
+    <div id="notificacoes" class="notificacoes-container"></div>
+
+    <!-- Elementos de Áudio (Ocultos) -->
+    <audio id="somLigar" src="audio/motor-v8-plymouth-barracuda-encendido-acelerada-marcha-243224.mp3" preload="auto"></audio>
+    <audio id="somDesligar" src="audio/tuning-whoosh-108007.mp3" preload="auto"></audio>
+    <audio id="somAcelerar" src="audio/acceleration-1-6916.mp3" preload="auto"></audio>
+    <audio id="somFrear" src="audio/car-driving-ambience-6365.mp3" preload="auto"></audio>
+    <audio id="somBuzina" src="audio/busina.mp3" preload="auto"></audio>
+    <audio id="somErro" src="audio/erro.mp3" preload="auto"></audio>
+
+
+    <footer class="main-footer-credits">
+        <p>Garagem Inteligente v4.0 - Desenvolvido com HTML, CSS e JavaScript</p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
